Add the *.yaml ending to license checker ignore list
Issue-ID: PORTALNG-6

Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>
Change-Id: I0484fd56b7c2a6d807bb82155d710d9603745e17

--- a/license-check-and-add-config.json
+++ b/license-check-and-add-config.json
@@ -1,5 +1,5 @@
 {
-    "ignore":["openapi","src/assets","server","Dockerfile","*.yml","*.json","*.md","**/*.conf.js",".*","*.sh","*.properties","version","development","*.json.template",".npm"],
+    "ignore":["openapi","src/assets","server","Dockerfile","*.yml","*.yaml","*.json","*.md","**/*.conf.js",".*","*.sh","*.properties","version","development","*.json.template",".npm"],
     "license": "LICENSE_HEADER",
     "licenseFormats": {
         "js|ts|css": {
