ui requires globally installed openapi-generator-cli npm package
Issue-ID: PORTALNG-34
Change-Id: I5c5cf7ea6b500bd18de74f7702b5d1f4d189c675
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "openapi": "openapi-generator-cli generate --generator-key v3.0",
+    "openapi": "npx openapi-generator-cli generate --generator-key v3.0",
     "ng": "./node-modules/.bin/ng",
     "prestart": "npm run openapi",
     "start": "ng serve -- --proxy-config staging.proxy.config.json --host 0.0.0.0 --port 80 --disable-host-check",
