Docker-compose setup for ui is not working
- use correct image repository
- remove all references to portal-[bff|preferences|history] and use the non-prefixed versions
- fix Keycloak realm settings

Issue-ID: PORTALNG-83
Change-Id: If86c6e13fa10584b3e209ad777f7f85d9cb3afe5
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>

--- a/development/.env
+++ b/development/.env
@@ -1,5 +1,5 @@
 # General image repository
-IMAGE_REPOSITORY=nexus.onap.org/content/repositories/snapshots/org/onap/
+IMAGE_REPOSITORY=nexus3.onap.org:10001/onap/portal-ng
 
 # Keycloak
 KEYCLOAK_IMAGE=quay.io/keycloak/keycloak
@@ -9,8 +9,8 @@ KEYCLOAK_PASSWORD=password
 KEYCLOAK_DB=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=password
-KEYCLOAK_URL:http://keycloak-bff:8080
-KEYCLOAK_REALM:ONAP
+KEYCLOAK_URL=http://keycloak-bff:8080
+KEYCLOAK_REALM=ONAP
 
 # Postgres database for keycloak
 POSTGRES_IMAGE=postgres
@@ -20,33 +20,29 @@ POSTGRES_VERSION=15rc1
 MONGO_IMAGE=mongo
 MONGO_VERSION=latest
 
-# portal-service
-PORTAL_SERVICE_URL=http://portal-service:9000
-PORTAL_SERVICE_IMAGE_NAME=portal-service
-PORTAL_SERVICE_IMAGE_TAG=0.1.0-d486ddb4
-
 # portal-prefs
-PORTAL_PREFS_URL=http://portal-prefs:9001
-PORTAL_PREFS_IMAGE_NAME=portal-prefs
-PORTAL_PREFS_IMAGE_TAG=0.1.0-master-faef0c0e
-PORTALPREFS_USERNAME=root
-PORTALPREFS_PASSWORD=password
-PORTALPREFS_DATABASE=Portalprefs
-PORTALPREFS_HOST=mongo-prefs
-PORTALPREFS_PORT=27017
+PREFERENCES_URL=http://preferences:9001
+PREFERENCES_IMAGE_NAME=preferences
+PREFERENCES_IMAGE_TAG=latest
+PREFERENCES_USERNAME=root
+PREFERENCES_PASSWORD=password
+PREFERENCES_DATABASE=preferences
+PREFERENCES_MONGO_HOST=mongo-preferences
+PREFERENCES_MONGO_PORT=27017
 
 # portal-history
-PORTAL_HISTORY_URL=http://portal-history:9002
-PORTAL_HISTORY_IMAGE_NAME=portal-history
-PORTAL_HISTORY_IMAGE_TAG=0.1.1-de369ace
-PORTALHISTORY_USERNAME=root
-PORTALHISTORY_PASSWORD=password
-PORTALHISTORY_DATABASE=Portalhist
-PORTALHISTORY_HOST=mongo-history
-PORTALHISTORY_PORT=27017
+HISTORY_URL=http://history:9002
+HISTORY_IMAGE_NAME=history
+HISTORY_IMAGE_TAG=latest
+HISTORY_USERNAME=root
+HISTORY_PASSWORD=password
+HISTORY_DATABASE=history
+HISTORY_MONGO_HOST=mongo-history
+HISTORY_MONGO_PORT=27017
 
-# portal-bff
-PORTAL_BFF_IMAGE_NAME=portal-bff
-PORTAL_BFF_IMAGE_TAG=0.1.9-389a09e1
-KEYCLOAK_CLIENT_ID=portal-bff
+# bff
+BFF_URL=http://bff:9080
+BFF_IMAGE_NAME=bff
+BFF_IMAGE_TAG=latest
+KEYCLOAK_CLIENT_ID=bff
 KEYCLOAK_CLIENT_SECRET=pKOuVH1bwRZoNzp5P5t4GV8CqcCJYVtr
