--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -37,47 +37,47 @@ services:
     container_name: mongo-history
     image: "${MONGO_IMAGE}:${MONGO_VERSION}"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${PORTALHISTORY_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${PORTALHISTORY_PASSWORD}
-  portal-history:
-    container_name: portal-history
-    image: "${IMAGE_REPOSITORY}/${PORTAL_HISTORY_IMAGE_NAME}:${PORTAL_HISTORY_IMAGE_TAG}"
+      MONGO_INITDB_ROOT_USERNAME: ${HISTORY_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${HISTORY_PASSWORD}
+  history:
+    container_name: history
+    image: "${IMAGE_REPOSITORY}/${HISTORY_IMAGE_NAME}:${HISTORY_IMAGE_TAG}"
     ports:
       - 9002:9002
     environment:
-      PORTALHISTORY_USERNAME: ${PORTALHISTORY_USERNAME}
-      PORTALHISTORY_PASSWORD: ${PORTALHISTORY_PASSWORD}
-      PORTALHISTORY_DATABASE: ${PORTALHISTORY_DATABASE}
+      HISTORY_USERNAME: ${HISTORY_USERNAME}
+      HISTORY_PASSWORD: ${HISTORY_PASSWORD}
+      HISTORY_DATABASE: ${HISTORY_DATABASE}
       KEYCLOAK_URL: ${KEYCLOAK_URL}
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
-      PORTALHISTORY_HOST: ${PORTALHISTORY_HOST}
-      PORTALHISTORY_PORT: ${PORTALHISTORY_PORT}
+      MONGO_HOST: ${HISTORY_MONGO_HOST}
+      MONGO_PORT: ${HISTORY_MONGO_PORT}
     depends_on:
       - mongo-history
-  mongo-prefs:
-    container_name: mongo-prefs
+  mongo-preferences:
+    container_name: mongo-preferences
     image: "${MONGO_IMAGE}:${MONGO_VERSION}"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${PORTALPREFS_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${PORTALPREFS_PASSWORD}
-  portal-prefs:
-    container_name: portal-prefs
-    image: "${IMAGE_REPOSITORY}/${PORTAL_PREFS_IMAGE_NAME}:${PORTAL_PREFS_IMAGE_TAG}"
+      MONGO_INITDB_ROOT_USERNAME: ${PREFERENCES_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${PREFERENCES_PASSWORD}
+  preferences:
+    container_name: preferences
+    image: "${IMAGE_REPOSITORY}/${PREFERENCES_IMAGE_NAME}:${PREFERENCES_IMAGE_TAG}"
     ports:
       - 9001:9001
     environment:
-      PORTALPREFS_USERNAME: ${PORTALPREFS_USERNAME}
-      PORTALPREFS_PASSWORD: ${PORTALPREFS_PASSWORD}
-      PORTALPREFS_DATABASE: ${PORTALPREFS_DATABASE}
+      PREFERENCES_USERNAME: ${PREFERENCES_USERNAME}
+      PREFERENCES_PASSWORD: ${PREFERENCES_PASSWORD}
+      PREFERENCES_DATABASE: ${PREFERENCES_DATABASE}
       KEYCLOAK_URL: ${KEYCLOAK_URL}
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
-      PORTALPREFS_HOST: ${PORTALPREFS_HOST}
-      PORTALPREFS_PORT: ${PORTALPREFS_PORT}
+      MONGO_HOST: ${PREFERENCES_MONGO_HOST}
+      MONGO_PORT: ${PREFERENCES_MONGO_PORT}
     depends_on:
-      - mongo-prefs
-  portal-bff:
-    container_name: portal-bff
-    image: "${IMAGE_REPOSITORY}/${PORTAL_BFF_IMAGE_NAME}:${PORTAL_BFF_IMAGE_TAG}"
+      - mongo-preferences
+  bff:
+    container_name: bff
+    image: "${IMAGE_REPOSITORY}/${BFF_IMAGE_NAME}:${BFF_IMAGE_TAG}"
     ports:
       - 9080:9080
     environment:
@@ -85,6 +85,19 @@ services:
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
       KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}
       KEYCLOAK_CLIENT_SECRET: ${KEYCLOAK_CLIENT_SECRET}
-      PORTAL_SERVICE_URL: ${PORTAL_SERVICE_URL}
-      PORTAL_PREFS_URL: ${PORTAL_PREFS_URL}
-      PORTAL_HISTORY_URL: ${PORTAL_HISTORY_URL}
+      PREFERENCES_URL: ${PREFERENCES_URL}
+      HISTORY_URL: ${HISTORY_URL}
+      COLLECTOR_HOST: localhost
+      COLLECTOR_PORT: 9411
+  # ui:
+  #   container_name: ui
+  #   image: "${IMAGE_REPOSITORY}/ui:latest"
+  #   ports:
+  #     - 80:8080
+  #   environment:
+  #     BFF_URL: ${BFF_URL}
+  #     KEYCLOAK_HOSTNAME: http://localhost:8080
+  #     KEYCLOAK_INTERNAL_URL: ${KEYCLOAK_URL}
+  #     KEYCLOAK_REALM: ${KEYCLOAK_REALM}
+  #     NGINX_PORT: 8080
+  #     KEYCLOAK_CLIENT_ID: portal-app
