--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
-    "@types/lodash": "^4.14.188",
+    "@types/lodash": "4.14.188",
     "@types/node": "16.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.17.0",
