Fix: Add inputs to composed-generic-sonar-cloud.yaml
Issue-ID: SECCOM-276

Add required JSON inputs as minimal strings: "{}"

Change-Id: I34d6f8ab70d0a1e6621261c6b59aad1ae4ac7218
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-merge.yaml
+++ b/.github/workflows/gerrit-merge.yaml
@@ -84,6 +84,8 @@ jobs:
       GERRIT_PROJECT: ${{ inputs.GERRIT_PROJECT }}
       GERRIT_REFSPEC: ${{ inputs.GERRIT_REFSPEC }}
       JDK_VERSION: "17"
+      ENV_VARS: "{}"
+      ENV_SECRETS: "{}"
       SONAR_ARGS: >
         -Dsonar.organization=onap
         -Dsonar.projectKey=onap_portal-ng-ui
