--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -86,7 +86,7 @@ jobs:
   vote:
     if: ${{ always() }}
     # yamllint enable rule:line-length
-    needs: [prepare, gradle-verify-clm]
+    needs: [prepare, generic-verify-clm]
     runs-on: ubuntu-latest
     steps:
       - name: Get conclusion
