--- a/.github/workflows/composed-generic-nexus-iq.yaml
+++ b/.github/workflows/composed-generic-nexus-iq.yaml
@@ -63,15 +63,17 @@ jobs:
   run-generic-clm:
     runs-on: ubuntu-latest
     steps:
-      - name: Gerrit Checkout
+      - uses: actions/checkout@v4
+
+      #- name: Gerrit Checkout
         # yamllint disable-line rule:line-length
-        uses: lfit/checkout-gerrit-change-action@54d751e8bd167bc91f7d665dabe33fae87aaaa63 # v0.9
-        with:
-          gerrit-refspec: ${{ inputs.GERRIT_REFSPEC }}
-          gerrit-project: ${{ inputs.GERRIT_PROJECT }}
-          gerrit-url: ${{ vars.GERRIT_URL }}
-          delay: "0s"
-          submodules: "true"
+      #  uses: lfit/checkout-gerrit-change-action@54d751e8bd167bc91f7d665dabe33fae87aaaa63 # v0.9
+      #  with:
+      #    gerrit-refspec: ${{ inputs.GERRIT_REFSPEC }}
+      #    gerrit-project: ${{ inputs.GERRIT_PROJECT }}
+      #    gerrit-url: ${{ vars.GERRIT_URL }}
+      #    delay: "0s"
+      #    submodules: "true"
       # yamllint disable-line rule:line-length
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         id: setup-python
