--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -48,23 +48,23 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clear votes
-        # yamllint disable-line rule:line-length
-        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a  # v0.6
-        with:
-          host: ${{ vars.GERRIT_SERVER }}
-          username: ${{ vars.GERRIT_SSH_USER }}
-          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
-          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
-          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
-          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
-          vote-type: clear
-          comment-only: true
-      - name: Allow replication
-        run: sleep 10s
+#  prepare:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Clear votes
+#        # yamllint disable-line rule:line-length
+#        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a  # v0.6
+#        with:
+#          username: ${{ vars.GERRIT_SSH_USER }}
+#          host: ${{ vars.GERRIT_SERVER }}
+#          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
+#          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
+#          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
+#          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
+#          vote-type: clear
+#          comment-only: true
+#      - name: Allow replication
+#        run: sleep 10s
 
   generic-verify-clm:
     needs: prepare
@@ -83,24 +83,24 @@ jobs:
     secrets:
       NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
 
-  vote:
-    if: ${{ always() }}
-    # yamllint enable rule:line-length
-    needs: [prepare, generic-verify-clm]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get conclusion
-        # yamllint disable-line rule:line-length
-        uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5  # v3.0.3
-      - name: Set vote
-        # yamllint disable-line rule:line-length
-        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a  # v0.6
-        with:
-          host: ${{ vars.GERRIT_SERVER }}
-          username: ${{ vars.GERRIT_SSH_USER }}
-          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
-          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
-          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
-          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
-          vote-type: ${{ env.WORKFLOW_CONCLUSION }}
-          comment-only: true
+#  vote:
+#    if: ${{ always() }}
+#    needs: [prepare, generic-verify-clm]
+#    runs-on: ubuntu-latest
+#    # yamllint enable rule:line-length
+#    steps:
+#      - name: Get conclusion
+#        # yamllint disable-line rule:line-length
+#        uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5  # v3.0.3
+#      - name: Set vote
+#        # yamllint disable-line rule:line-length
+#        uses: lfit/gerrit-review-action@7c30179c3c9389545fccb0d458df59879372ae6a  # v0.6
+#        with:
+#          host: ${{ vars.GERRIT_SERVER }}
+#          username: ${{ vars.GERRIT_SSH_USER }}
+#          key: ${{ secrets.GERRIT_SSH_PRIVKEY }}
+#          known_hosts: ${{ vars.GERRIT_KNOWN_HOSTS }}
+#          gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
+#          gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
+#          vote-type: ${{ env.WORKFLOW_CONCLUSION }}
+#          comment-only: true
