Chore: Remove redundant needs statement, test again
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -67,7 +67,7 @@ jobs:
 #        run: sleep 10s
 
   generic-verify-clm:
-    needs: prepare
+    # needs: prepare
     # yamllint disable-line rule:line-length
     uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/workflows/composed-generic-nexus-iq.yaml@master
     with:
