--- a/.github/workflows/composed-generic-nexus-iq.yaml
+++ b/.github/workflows/composed-generic-nexus-iq.yaml
@@ -51,7 +51,7 @@ on:
 
 concurrency:
   # yamllint disable-line rule:line-length
-  group: composed-gradle-nexus-iq-${{ github.workflow }}-${{ github.event.inputs.GERRIT_BRANCH}}-${{ github.event.inputs.GERRIT_CHANGE_ID || github.run_id }}
+  group: composed-generic-nexus-iq-${{ github.workflow }}-${{ github.event.inputs.GERRIT_BRANCH}}-${{ github.event.inputs.GERRIT_CHANGE_ID || github.run_id }}
   cancel-in-progress: true
 
 env:
@@ -84,6 +84,13 @@ jobs:
         run: |
           REPO_DASHED=$(echo ${{ inputs.GERRIT_PROJECT }} | tr "/" "-")
           echo "APPLICATION_ID=${{ vars.ORGANIZATION }}-${REPO_DASHED}" >> "$GITHUB_ENV"
+          echo "### DEBUG ###"
+          echo "serverUrl: ${{ env.NEXUS_IQ_SERVER }}"
+          echo "username: ${{ vars.NEXUS_IQ_USERNAME }}"
+          echo "password: ${{ secrets.NEXUS_IQ_PASSWORD }}"
+          echo "applicationId: ${{ env.APPLICATION_ID }}"
+          echo "stage: ${{ env.NEXUS_STAGE }}"
+          echo "target: ${{ env.NEXUS_TARGET }}"
         # yamllint enable rule:line-length
       - name: Nexus IQ Policy Evaluation
         continue-on-error: true
