--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Nexus IQ Policy Evaluation
         continue-on-error: true
-        uses: ModeSevenIndustrialSolutions/iq-github-action@master
+        uses: ModeSevenIndustrialSolutions/iq-github-action@main
         with:
           serverUrl: ${{ env.NEXUS_IQ_SERVER }}
           username: ${{ vars.NEXUS_IQ_USERNAME }}
