--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -44,7 +44,10 @@ jobs:
           serverUrl: ${{ vars.NEXUS_IQ_SERVER }}
           username: ${{ vars.NEXUS_IQ_USERNAME }}
           password: ${{ secrets.NEXUS_IQ_PASSWORD }}
-          applicationId: ${{ github.repository_owner }}-${{ github.event.repository.name }}
+          #applicationId: ${{ github.repository_owner }}-${{ github.event.repository.name }}
+          # Temporarily force to ONAP because testing in ModeSevenIndustrialSolutions
+          applicationId: onap-${{ github.event.repository.name }}
+
           stage: "build"
           target: "/"
           writePolicyEvaluationJson: "policy-eval-results.json"
