--- a/.github/actions/node-build/action.yaml
+++ b/.github/actions/node-build/action.yaml
@@ -8,32 +8,31 @@ description: 'Build a Node.js project'
 
 inputs:
   BUILD-TOOL:
-    description: "Used to build Node.js project [npm|yarn]"
+    description: 'Used to build Node.js project [npm|yarn]'
     required: false
-    default: "npm"
+    default: 'npm'
   NODE-VERSION:
-    description: "Node.js version to use for build"
+    description: 'Node.js version to use for build'
     required: false
     default: 20
 
 runs:
-  uses: "composite"
+  uses: 'composite'
   steps:
-
     # Setup/install Node.js tooling
-    - name: "Setup Node.js"
+    - name: 'Setup Node.js'
       uses: actions/setup-node@v4
       with:
         node-version: inputs.node-version
 
     # Install Yarn, show tooling versions
-    - run: "npm install --global yarn"
-    - run: "node -v"
-    - run: "npm -v"
-    - run: "yarn -v"
+    - run: 'npm install --global yarn'
+    - run: 'node -v'
+    - run: 'npm -v'
+    - run: 'yarn -v'
 
     # Build project with preferred tooling
-    - run: "npm install --production"
+    - run: 'npm install --production'
       if: inputs.node-version == 'npm'
-    - run: "yarn install --prod"
+    - run: 'yarn install --prod'
       if: inputs.node-version == 'yarn'
