Chore: Update gerrit-verify.yaml
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -100,7 +100,7 @@ jobs:
       #    secrets: ${{ inputs.env-secrets }}
 
       # Build Node.js project
-      - uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/node-build@main
+      - uses: ModeSevenIndustrialSolutions/portal-ng-ui/.github/actions/node-build@master
         with:
           node-version: 20
           build-tool: yarn
