Chore: Update node-build/action.yaml
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/actions/node-build/action.yaml
+++ b/.github/actions/node-build/action.yaml
@@ -38,6 +38,8 @@ runs:
 
     # Build project with preferred tooling
     - run: 'npm install --production'
+      shell: bash
       if: inputs.node-version == 'npm'
     - run: 'yarn install --prod'
+      shell: bash
       if: inputs.node-version == 'yarn'
