--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -9,44 +9,44 @@ on:
   # ToDo: convert to a reusable workflow later
   workflow_dispatch:
     # workflow_call:
-    inputs:
+#    inputs:
       ### Required when interacting with Gerrit
-      GERRIT_BRANCH:
-        description: 'Branch that change is against'
-        required: true
-        type: string
-      GERRIT_CHANGE_ID:
-        description: 'The ID for the change'
-        required: true
-        type: string
-      GERRIT_CHANGE_NUMBER:
-        description: 'The Gerrit number'
-        required: true
-        type: string
-      GERRIT_CHANGE_URL:
-        description: 'URL to the change'
-        required: true
-        type: string
-      GERRIT_EVENT_TYPE:
-        description: 'Type of Gerrit event'
-        required: true
-        type: string
-      GERRIT_PATCHSET_NUMBER:
-        description: 'The patch number for the change'
-        required: true
-        type: string
-      GERRIT_PATCHSET_REVISION:
-        description: 'The revision sha'
-        required: true
-        type: string
-      GERRIT_PROJECT:
-        description: 'Project in Gerrit'
-        required: true
-        type: string
-      GERRIT_REFSPEC:
-        description: 'Gerrit refspec of change'
-        required: true
-        type: string
+#      GERRIT_BRANCH:
+#        description: 'Branch that change is against'
+#        required: true
+#        type: string
+#      GERRIT_CHANGE_ID:
+#        description: 'The ID for the change'
+#        required: true
+#        type: string
+#      GERRIT_CHANGE_NUMBER:
+#        description: 'The Gerrit number'
+#        required: true
+#        type: string
+#      GERRIT_CHANGE_URL:
+#        description: 'URL to the change'
+#        required: true
+#        type: string
+#      GERRIT_EVENT_TYPE:
+#        description: 'Type of Gerrit event'
+#        required: true
+#        type: string
+#      GERRIT_PATCHSET_NUMBER:
+#        description: 'The patch number for the change'
+#        required: true
+#        type: string
+#      GERRIT_PATCHSET_REVISION:
+#        description: 'The revision sha'
+#        required: true
+#        type: string
+#      GERRIT_PROJECT:
+#        description: 'Project in Gerrit'
+#        required: true
+#        type: string
+#      GERRIT_REFSPEC:
+#        description: 'Gerrit refspec of change'
+#        required: true
+#        type: string
 
       ### Specific to this workflow
       SOURCE-ORIGIN:
