--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -2,58 +2,58 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024 The Linux Foundation <https://linuxfoundation.org>
 
-name: "Nexus IQ Scan"
+name: 'Nexus IQ Scan'
 
 # yamllint disable-line rule:truthy
 on:
   # ToDo: convert to a reusable workflow later
   workflow_dispatch:
     # workflow_call:
-#    inputs:
-      ### Required when interacting with Gerrit
-#      GERRIT_BRANCH:
-#        description: 'Branch that change is against'
-#        required: true
-#        type: string
-#      GERRIT_CHANGE_ID:
-#        description: 'The ID for the change'
-#        required: true
-#        type: string
-#      GERRIT_CHANGE_NUMBER:
-#        description: 'The Gerrit number'
-#        required: true
-#        type: string
-#      GERRIT_CHANGE_URL:
-#        description: 'URL to the change'
-#        required: true
-#        type: string
-#      GERRIT_EVENT_TYPE:
-#        description: 'Type of Gerrit event'
-#        required: true
-#        type: string
-#      GERRIT_PATCHSET_NUMBER:
-#        description: 'The patch number for the change'
-#        required: true
-#        type: string
-#      GERRIT_PATCHSET_REVISION:
-#        description: 'The revision sha'
-#        required: true
-#        type: string
-#      GERRIT_PROJECT:
-#        description: 'Project in Gerrit'
-#        required: true
-#        type: string
-#      GERRIT_REFSPEC:
-#        description: 'Gerrit refspec of change'
-#        required: true
-#        type: string
+    #    inputs:
+    ### Required when interacting with Gerrit
+    #      GERRIT_BRANCH:
+    #        description: 'Branch that change is against'
+    #        required: true
+    #        type: string
+    #      GERRIT_CHANGE_ID:
+    #        description: 'The ID for the change'
+    #        required: true
+    #        type: string
+    #      GERRIT_CHANGE_NUMBER:
+    #        description: 'The Gerrit number'
+    #        required: true
+    #        type: string
+    #      GERRIT_CHANGE_URL:
+    #        description: 'URL to the change'
+    #        required: true
+    #        type: string
+    #      GERRIT_EVENT_TYPE:
+    #        description: 'Type of Gerrit event'
+    #        required: true
+    #        type: string
+    #      GERRIT_PATCHSET_NUMBER:
+    #        description: 'The patch number for the change'
+    #        required: true
+    #        type: string
+    #      GERRIT_PATCHSET_REVISION:
+    #        description: 'The revision sha'
+    #        required: true
+    #        type: string
+    #      GERRIT_PROJECT:
+    #        description: 'Project in Gerrit'
+    #        required: true
+    #        type: string
+    #      GERRIT_REFSPEC:
+    #        description: 'Gerrit refspec of change'
+    #        required: true
+    #        type: string
 
-      ### Specific to this workflow
-      SOURCE-ORIGIN:
-        description: 'Code repository/origin [gerrit|other]'
-        required: false
-        type: string
-        default: 'gerrit'
+    ### Specific to this workflow
+    SOURCE-ORIGIN:
+      description: 'Code repository/origin [gerrit|other]'
+      required: false
+      type: string
+      default: 'gerrit'
 
 concurrency:
   # yamllint disable-line rule:line-length
@@ -128,9 +128,9 @@ jobs:
           # Temporarily force to ONAP because testing in ModeSevenIndustrialSolutions
           applicationId: onap-${{ github.event.repository.name }}
           stage: 'build'
-          target: '/'
+          target: ''
           writePolicyEvaluationJson: 'policy-eval-results.json'
-          debug: true
+          debug: false
 
   #vote:
   #  if: inputs.source-origin == 'gerrit'
