--- a/.github/actions/iq-github-action/action.yaml
+++ b/.github/actions/iq-github-action/action.yaml
@@ -16,11 +16,11 @@ inputs:
     required: true
   stage:
     description: 'Controls the stage the policy evaluation will be run against on the Sonatype Lifecycle Server.'
-    required: false
+    required: true
     default: 'Build'
   target:
     description: 'The scan target path - can be an archive or directory. Value will be prefixed by `$GITHUB_WORKSPACE`. Default will be the entire GitHub Workspace.'
-    required: false
+    required: true
     default: "/"
   debug:
     description: 'Whether to enable Debug Logging. Set to `true` to enable. **Not recommended to enable in Production Environments.** *Added in v2.0.0*.'
