--- a/.github/workflows/gerrit-verify.yaml
+++ b/.github/workflows/gerrit-verify.yaml
@@ -128,9 +128,9 @@ jobs:
           # Temporarily force to ONAP because testing in ModeSevenIndustrialSolutions
           applicationId: onap-${{ github.event.repository.name }}
           stage: 'build'
-          target: ''
+          # target: ''
           writePolicyEvaluationJson: 'policy-eval-results.json'
-          debug: false
+          # debug: true
 
   #vote:
   #  if: inputs.source-origin == 'gerrit'
